# RealEstateExpert

./: .env.example  .gitignore  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts  vercel.json
app/: globals.css  layout.tsx  page.tsx
components/: AnalysisHistoryPanel.tsx  AnalysisSourcesPanel.tsx  AnnualSummaryChart.tsx  AreaSelectMap.tsx  BatchFetchPanel.tsx  CashFlowChart.tsx  HomePage.tsx  HomePageContent.tsx  LanguageToggle.tsx  ListingMapPreview.tsx  ListingPriceRentScatter.tsx  ListingProfitFiltersPanel.tsx  ListingProfitPanel.tsx  ListingProfitSettingsPanel.tsx  ListingsExportPanel.tsx  ListingsMap.tsx  ListingsMapFilters.tsx  ListingsMapView.tsx  MapPolygonDrawControl.tsx  MarketPriceCharts.tsx  MarketToggle.tsx  MonthlyBreakdownChart.tsx  MortgageCapitalChart.tsx  MortgageSimulatorPanel.tsx  OccupancyAreaPriceChart.tsx  OccupancyMinimap.tsx  OccupancyRatePanel.tsx  OccupancyRemovalsLog.tsx  OccupancySnapshotManagePanel.tsx  PropertyDetailPanel.tsx  PropertySimilarRentMap.tsx  PurchaseBreakdown.tsx  RoiChart.tsx  ScenarioForm.tsx  ServiceWorkerCleanup.tsx  SummaryCards.tsx
frontend/: .env.example  package-lock.json
lib/: analysis-history-client.ts  api.ts  (+42 more)
reggio_rentals/: .gitignore  Makefile  README.md  pyproject.toml
reggio_rentals/src/reggio_rentals/: __init__.py  __main__.py  browser.py  config.py  dates.py  export_db.py  models.py  parser.py  pipeline.py  storage.py
reggio_rentals/tests/: test_dates.py  test_enrich.py  test_parser.py
reggio_rentals/tests/fixtures/: next_data_detail.json  next_data_page1.json
(+293 files in other folders)
