[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "reggio-rentals"
version = "0.1.0"
description = "Playwright scraper for Immobiliare.it rentals in Reggio Calabria"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "playwright>=1.40",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
